begun presentation for Walsh lab meeting

--- a/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
+++ b/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
@@ -23,6 +23,7 @@
     "from bsmcalls import preprocessing\n",
     "import fwsel\n",
     "import statsmodels as sm\n",
+    "import attila_utils\n",
     "%matplotlib inline"
    ]
   },
@@ -153,10 +154,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5.639</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 08 Oct 2020</td> <th>  Prob (F-statistic):</th> <td>6.95e-16</td>\n",
+       "  <th>Date:</th>             <td>Fri, 09 Oct 2020</td> <th>  Prob (F-statistic):</th> <td>6.95e-16</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:42:23</td>     <th>  Log-Likelihood:    </th> <td> -1985.1</td>\n",
+       "  <th>Time:</th>                 <td>11:47:11</td>     <th>  Log-Likelihood:    </th> <td> -1985.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3411</td>      <th>  AIC:               </th> <td>   4016.</td>\n",
@@ -268,8 +269,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.035\n",
        "Model:                            OLS   Adj. R-squared:                  0.029\n",
        "Method:                 Least Squares   F-statistic:                     5.639\n",
-       "Date:                Thu, 08 Oct 2020   Prob (F-statistic):           6.95e-16\n",
-       "Time:                        16:42:23   Log-Likelihood:                -1985.1\n",
+       "Date:                Fri, 09 Oct 2020   Prob (F-statistic):           6.95e-16\n",
+       "Time:                        11:47:11   Log-Likelihood:                -1985.1\n",
        "No. Observations:                3411   AIC:                             4016.\n",
        "Df Residuals:                    3388   BIC:                             4157.\n",
        "Df Model:                          22                                         \n",
@@ -338,7 +339,8 @@
     {
      "data": {
       "text/plain": [
-       "Text(0.5, 1.0, 'Distribution of mean depth per sample')"
+       "['named-figure/mean-depth-per-sample.png',\n",
+       " 'named-figure/mean-depth-per-sample.pdf']"
       ]
      },
      "execution_count": 8,
@@ -373,7 +375,8 @@
     "    return((fig, ax, s))\n",
     "\n",
     "fig, ax, df = plotter('DP')\n",
-    "ax.set_title('Distribution of mean depth per sample')"
+    "ax.set_title('Distribution of mean depth per sample')\n",
+    "attila_utils.savefig(fig, 'mean-depth-per-sample')"
    ]
   },
   {
@@ -391,7 +394,8 @@
     {
      "data": {
       "text/plain": [
-       "Text(0.5, 1.0, 'Distribution of mean allele frequency per sample')"
+       "['named-figure/mean-allele-freq-per-sample.png',\n",
+       " 'named-figure/mean-allele-freq-per-sample.pdf']"
       ]
      },
      "execution_count": 9,
@@ -413,7 +417,8 @@
    ],
    "source": [
     "fig, ax, df = plotter('AF')\n",
-    "ax.set_title('Distribution of mean allele frequency per sample')"
+    "ax.set_title('Distribution of mean allele frequency per sample')\n",
+    "attila_utils.savefig(fig, 'mean-allele-freq-per-sample')"
    ]
   },
   {
@@ -431,7 +436,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f223e229b90>"
+       "['named-figure/DP-AF-Dx-calls.png', 'named-figure/DP-AF-Dx-calls.pdf']"
       ]
      },
      "execution_count": 10,
@@ -454,12 +459,13 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "calls2_dummy = preprocessing.dummify_var(calls2)\n",
-    "calls2_dummy.plot(kind='scatter', x='DP', y='AF', marker='o', alpha=0.3, c='Dx', cmap='coolwarm_r', ax=ax)"
+    "calls2_dummy.plot(kind='scatter', x='DP', y='AF', marker='o', alpha=0.3, c='Dx', cmap='coolwarm_r', ax=ax)\n",
+    "attila_utils.savefig(fig, 'DP-AF-Dx-calls')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,16 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f223053c8d0>"
+       "['named-figure/DP-AF-jointdensity-calls.png',\n",
+       " 'named-figure/DP-AF-jointdensity-calls.pdf']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -542,21 +549,22 @@
     "    ax.set_ylabel('read depth')\n",
     "    ax.set_title('Joint Density')\n",
     "    return(ax)\n",
-    "plot_kde(ax[0])"
+    "plot_kde(ax[0])\n",
+    "attila_utils.savefig(fig, 'DP-AF-jointdensity-calls')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2230376b50>"
+       "['named-figure/AF-conddensity.png', 'named-figure/AF-conddensity.pdf']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,21 +607,23 @@
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
     "plot_ckde(dp0, ax, 0.1)\n",
     "plot_ckde(dp1, ax, 0.05)\n",
-    "plot_ckde(dp2, ax, 0)"
+    "plot_ckde(dp2, ax, 0)\n",
+    "attila_utils.savefig(fig, 'AF-conddensity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['named-figure/DP-AF-jointdensity-conddensity.png',\n",
+       " 'named-figure/DP-AF-jointdensity-conddensity.pdf']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -649,12 +659,13 @@
     "plot_ckde(dp2, ax[1], 0)\n",
     "ax[1].set_xlabel('allele frequency')\n",
     "ax[1].set_title('Conditional Densities')\n",
-    "ax[1].set_yticks(ticks=[])"
+    "ax[1].set_yticks(ticks=[])\n",
+    "attila_utils.savefig(fig, 'DP-AF-jointdensity-conddensity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +674,7 @@
        "array([-1.52955942, -1.51462041, -1.60244657])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,10 +798,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5.496</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 08 Oct 2020</td> <th>  Prob (F-statistic):</th> <td>6.46e-16</td>\n",
+       "  <th>Date:</th>             <td>Fri, 09 Oct 2020</td> <th>  Prob (F-statistic):</th> <td>6.46e-16</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:42:27</td>     <th>  Log-Likelihood:    </th> <td> -1983.9</td>\n",
+       "  <th>Time:</th>                 <td>11:47:19</td>     <th>  Log-Likelihood:    </th> <td> -1983.9</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  3411</td>      <th>  AIC:               </th> <td>   4016.</td>\n",
@@ -905,8 +916,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.036\n",
        "Model:                            OLS   Adj. R-squared:                  0.029\n",
        "Method:                 Least Squares   F-statistic:                     5.496\n",
-       "Date:                Thu, 08 Oct 2020   Prob (F-statistic):           6.46e-16\n",
-       "Time:                        16:42:27   Log-Likelihood:                -1983.9\n",
+       "Date:                Fri, 09 Oct 2020   Prob (F-statistic):           6.46e-16\n",
+       "Time:                        11:47:19   Log-Likelihood:                -1983.9\n",
        "No. Observations:                3411   AIC:                             4016.\n",
        "Df Residuals:                    3387   BIC:                             4163.\n",
        "Df Model:                          23                                         \n",
@@ -969,13 +980,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 43877,\n",
-      "  \"iopub_port\": 39053,\n",
-      "  \"stdin_port\": 53211,\n",
-      "  \"control_port\": 50157,\n",
-      "  \"hb_port\": 39459,\n",
+      "  \"shell_port\": 35805,\n",
+      "  \"iopub_port\": 50219,\n",
+      "  \"stdin_port\": 40713,\n",
+      "  \"control_port\": 55127,\n",
+      "  \"hb_port\": 55413,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"01ab83b9-3666c694adad135f6ec03908\",\n",
+      "  \"key\": \"f55e8509-ebd0953d4f6342d67799429e\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -984,7 +995,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-8bd309dc-294c-441b-9d3e-49bf1aae6761.json\n",
+      "    $> jupyter <app> --existing kernel-25ff88e0-c897-4387-8efc-b9c2005bf8dc.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -994,6 +1005,13 @@
    "source": [
     "%connect_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
