--- a/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
+++ b/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
@@ -47,7 +47,7 @@
     "1. Call sets\n",
     "    * Fig: control & affected WGS data sets Walsh Control DLPFC WGS data to be added (NeuN+ ?)s\n",
     "    * bsmn-pipeline on AWS ParallelCluster; thanks to TJ et al\n",
-    "    * filtered callsets; Fig: joint distribution of number of calls, depth, AF; discuss implications to sensitivity/recall\n",
+    "    * filtered callsets; `2020-08-13-select-vars/named-figure/DP-AF-jointdensity-conddensity.pdf`: joint distribution of number of calls, depth, AF; discuss implications to sensitivity/recall\n",
     "1. Call features; philosophy: collect many features and select relevant ones with statistical techniques\n",
     "    1. from Chess/CommonMind data\n",
     "        1. VCF fields: sequencing, mapping and calling (GATK HC) features\n",
