Colored nested observations

--- a/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
+++ b/notebook/2020-10-06-progress-report/2020-10-06-progress-report.ipynb
@@ -64,6 +64,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feedback\n",
+    "\n",
+    "Chris Walsh wanted to see a more gene centric, hypothesis driven analysis. He referred us to this new study: [Exome sequencing identifies rare coding variants in 10 genes which confer substantial risk for schizophrenia](https://www.medrxiv.org/content/10.1101/2020.09.18.20192815v1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
